--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -60,4 +60,15 @@ html, body {
   color: antiquewhite;
   overflow: auto;
 }
-      
+
+h1 a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34pt;
+  font-family: fantasy;
+}
+h1 a:hover{
+  color: inherit;
+  text-decoration: none;
+}
